# machinery

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  machinery.toml  rust-toolchain.toml
.github/workflows/: docs.yml
crates/modeling/: Cargo.toml
crates/modeling/src/: lib.rs  prediction.rs  temporal.rs  validation.rs
diggiden/: README.md  pyproject.toml
diggiden/examples/: adversarial_demo.py
diggiden/src/diggiden/: __init__.py  adversarial_engine.py  antagonist.py
docs/: README.md  book.toml
docs/src/: README.md  SUMMARY.md
docs/src/foundation/: philosophy.md  temporal-dynamics.md
docs/src/setup/: installation.md  prerequisites.md
docs/src/status/: current.md
docs/theme/: custom.css
hatata/: README.md  pyproject.toml
hatata/examples/: stochastic_demo.py
hatata/src/hatata/: __init__.py  hatata_core.py  mdp_engine.py  utility_optimizer.py
mzekezeke/: README.md  pyproject.toml
mzekezeke/src/mzekezeke/: __init__.py
mzekezeke/src/mzekezeke/health_metrics/: __init__.py  base.py  heart_rate.py
mzekezeke/src/mzekezeke/ml_models/: __init__.py  base.py  huggingface.py
nicotine/: README.md  pyproject.toml
nicotine/src/nicotine/: __init__.py  config.py  context.py  integrations.py  puzzles.py  schedulers.py  solvers.py  utils.py  validators.py
spectacular/: README.md  pyproject.toml
spectacular/src/spectacular/: __init__.py  config.py  detectors.py  integrations.py  networks.py  processors.py  scorers.py  utils.py  visualizers.py
src/: examples.rs  lib.rs  utils.rs
zengeza/: README.md  pyproject.toml
zengeza/examples/: basic_example.py
zengeza/src/zengeza/: __init__.py  analyzers.py  config.py  detectors.py  filters.py  integrations.py  optimizers.py  processors.py  reducers.py  utils.py
