[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nicotine"
version = "0.1.0"
description = "Context validation and coherence maintenance system for AI processes in Machinery framework"
authors = [
    { name = "Machinery Team", email = "team@machinery.dev" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["context-validation", "ai-coherence", "system-breaks", "context-refresh", "cognitive-architecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core scientific computing
    "numpy>=1.21.0",
    "scipy>=1.8.0",
    "pandas>=1.4.0",
    
    # Machine learning and NLP
    "scikit-learn>=1.2.0",
    "transformers>=4.20.0",
    "torch>=1.12.0",
    "sentence-transformers>=2.2.0",
    
    # Text processing and analysis
    "nltk>=3.8.0",
    "spacy>=3.4.0",
    "textstat>=0.7.0",
    
    # Puzzle generation and solving
    "sympy>=1.11.0",
    "networkx>=2.8.0",
    "python-constraint>=1.4.0",
    
    # Data processing
    "pydantic>=1.10.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    
    # Memory and state management
    "redis>=4.5.0",
    "sqlite3-utils>=0.14.0",
    "pickle-mixin>=1.0.2",
    
    # Timing and scheduling
    "schedule>=1.2.0",
    "croniter>=1.3.0",
    "apscheduler>=3.10.0",
    
    # Cryptography for puzzle security
    "cryptography>=40.0.0",
    "hashlib-compat>=1.0.0",
    
    # Visualization and monitoring
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.10.0",
    
    # Utilities
    "requests>=2.28.0",
    "python-dotenv>=0.19.0",
    "typer>=0.7.0",
    "rich>=12.0.0",
    "tqdm>=4.64.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
    "pre-commit>=2.20.0",
]

gpu = [
    "torch[cuda]>=1.12.0",
    "cupy>=11.0.0",
]

research = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.4.0",
    "ipywidgets>=8.0.0",
    "papermill>=2.4.0",
]

nlp = [
    "spacy[cuda]>=3.4.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0.tar.gz",
]

[project.urls]
Homepage = "https://github.com/fullscreen-triangle/machinery"
Documentation = "https://fullscreen-triangle.github.io/machinery"
Repository = "https://github.com/fullscreen-triangle/machinery"
"Bug Tracker" = "https://github.com/fullscreen-triangle/machinery/issues"

[project.scripts]
nicotine = "nicotine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=nicotine --cov-report=term-missing"
asyncio_mode = "auto" 